--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "lint": "echo \"No linting configured\""
   },
   "keywords": [],
-  "author": "MrBean <KB2A TEAN>",
+  "author": "MrBean <KB2A TEAM>",
   "license": "MIT",
   "config": {
     "forge": {
       "packagerConfig": {},
-      "makers": [{
+      "makers": [
+        {
           "name": "@electron-forge/maker-squirrel",
           "config": {
             "name": "gunsurvival_client",
@@ -41,13 +42,6 @@
         {
           "name": "@electron-forge/maker-rpm",
           "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-wix",
-          "config": {
-            "language": 1033,
-            "manufacturer": "KB2A TEAM"
-          }
         }
       ]
     }
