--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Đây là client của game Gunsurvival",
   "main": "src/index.js",
   "scripts": {
-    "start": "npm install & electron-forge start",
+    "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -56,7 +56,8 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.50",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.50",
     "@electron-forge/maker-zip": "^6.0.0-beta.50",
-    "electron": "8.2.4"
+    "electron": "8.2.4",
+    "eslint": "^7.5.0"
   },
   "repository": {
     "type": "git",
